feat: add parser

--- a/webtestpilot/pyproject.toml
+++ b/webtestpilot/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.12"
 dependencies = [
     "baml-py>=0.201.0",
     "openai>=1.95.1",
+    "python-dotenv>=1.1.1",
     "pyyaml>=6.0.2",
 ]
