--- a/webapps/bookstack/docker-compose.yaml
+++ b/webapps/bookstack/docker-compose.yaml
@@ -2,9 +2,7 @@ version: "3"
 
 services:
   app:
-    image: solidnerd/bookstack:25.2.1
-    depends_on:
-      - db
+    image: lscr.io/linuxserver/bookstack:version-v25.02.1
     environment:
       - PUID=1000
       - PGID=1000
@@ -19,7 +17,7 @@ services:
     volumes:
       - app_config:/config
     ports:
-      - ${APP_PORT}:8080
+      - ${APP_PORT}:80
     restart: unless-stopped
 
   db:
