--- a/webapps/bookstack/docker-compose.yaml
+++ b/webapps/bookstack/docker-compose.yaml
@@ -2,7 +2,8 @@ version: "3"
 
 services:
   app:
-    image: solidnerd/bookstack:25.2.1
+    #image: solidnerd/bookstack:25.2.1
+    image: mybookstack:patched
     depends_on:
       - db
     environment:
