--- a/webapps/prestashop/docker-compose.yaml
+++ b/webapps/prestashop/docker-compose.yaml
@@ -1,12 +1,15 @@
 services:
   app:
-    image: prestashop/prestashop:8
+    #image: prestashop/prestashop:8
+    build: .
     ports:
       - ${APP_PORT}:80
     environment:
       - PS_DEV_MODE=1
       - PS_INSTALL_AUTO=1
-      - PS_DOMAIN=localhost:${APP_PORT}
+      - PS_DOMAIN=${URL}:${APP_PORT}
+      - ADMIN_MAIL=admin@admin.com      # here is the email address of the admin,you can change it 
+      - ADMIN_PASSWD=admin12345         # here is the password of the admin ,you can change it 
       - PS_FOLDER_ADMIN=webtestpilot
       - DB_SERVER=db
       - DB_USER=root
