Implement tracing capabilities in Playwright with new TracedPage and traced_expect functions
- Added `traced_expect.py` to enhance Playwright's expect function with tracing capabilities.
- Introduced `traced_page.py` for an enhanced Page wrapper that manages tracing and trace output.
- Created `tracing_api.py` to provide a clean API for the XPath tracing system, including utility functions for enabling/disabling tracing.
- Updated `uv.lock` to include new dependencies: beautifulsoup4, cssselect, lxml, and playwright-dompath, ensuring compatibility with the new tracing features.

--- a/testcases/pyproject.toml
+++ b/testcases/pyproject.toml
@@ -9,4 +9,5 @@ dependencies = [
     "pytest>=8.4.1",
     "pytest-playwright>=0.7.0",
     "pytest-xdist>=3.6.1",
+    "playwright-dompath>=0.0.1",
 ]
