--- a/webapps/prestashop/docker-compose.yaml
+++ b/webapps/prestashop/docker-compose.yaml
@@ -19,6 +19,7 @@ services:
       - db
 
   db:
+    platform: linux/x86_64
     image: mysql:5.7
     environment:
       MYSQL_DATABASE: prestashop
