--- a/webtestpilot/pyproject.toml
+++ b/webtestpilot/pyproject.toml
@@ -7,12 +7,15 @@ requires-python = ">=3.12"
 dependencies = [
     "baml-py>=0.201.0",
     "matplotlib>=3.10.3",
+    "numba>=0.61.2",
     "openai>=1.95.1",
+    "opencv-python>=4.12.0.88",
     "pillow>=11.3.0",
     "playwright>=1.53.0",
     "python-dotenv>=1.1.1",
     "python-levenshtein>=0.27.1",
     "pyyaml>=6.0.2",
     "ruff>=0.12.3",
+    "scikit-image>=0.25.2",
     "zss>=1.2.0",
 ]
