--- a/webapps/indico/indico.conf
+++ b/webapps/indico/indico.conf
@@ -5,7 +5,7 @@ del os
 
 # Change this to something long and random
 SECRET_KEY = '38a69659-db54-4e85-9a2f-08b128ccbee9'
-BASE_URL = 'http://localhost:8080'
+BASE_URL = 'http://49.232.8.242:8080'
 USE_PROXY = True
 
 DEFAULT_TIMEZONE = 'Europe/Zurich'
@@ -29,4 +29,4 @@ STORAGE_BACKENDS   = {'default': 'fs:/opt/indico/archive'}
 ATTACHMENT_STORAGE = 'default'
 
 # Specify the plugins you need here
-PLUGINS = {'previewer_code', 'vc_zoom', 'payment_manual'}
+#PLUGINS = {'previewer_code', 'vc_zoom', 'payment_manual'}
