refactor: auto create user in prestashop

--- a/webapps/indico/indico.conf
+++ b/webapps/indico/indico.conf
@@ -5,7 +5,7 @@ del os
 
 # Change this to something long and random
 SECRET_KEY = '38a69659-db54-4e85-9a2f-08b128ccbee9'
-BASE_URL = 'http://49.232.8.242:8080'
+BASE_URL = 'http://localhost:8080'
 USE_PROXY = True
 
 DEFAULT_TIMEZONE = 'Europe/Zurich'
