--- a/webtestpilot/pyproject.toml
+++ b/webtestpilot/pyproject.toml
@@ -14,10 +14,16 @@ dependencies = [
     "opencv-python>=4.12.0.88",
     "pillow>=11.3.0",
     "playwright>=1.53.0",
+    "pydantic>=2.11.7",
     "python-dotenv>=1.1.1",
     "python-levenshtein>=0.27.1",
     "pyyaml>=6.0.2",
-    "ruff>=0.12.3",
     "scikit-image>=0.25.2",
     "zss>=1.2.0",
+]
+
+[dependency-groups]
+dev = [
+    "aider-install>=0.2.0",
+    "ruff>=0.12.3",
 ]
