--- a/webapps/indico/worker/uwsgi.ini
+++ b/webapps/indico/worker/uwsgi.ini
@@ -5,6 +5,7 @@
 ;pidfile = /run/uwsgi/uwsgi.pid
 ;stats = /opt/indico/web/uwsgi-stats.sock
 
+buffer-size = 65535
 processes = 4
 enable-threads = true
 http-socket = 0.0.0.0:59999
