--- a/testcases/pyproject.toml
+++ b/testcases/pyproject.toml
@@ -11,9 +11,98 @@ dependencies = [
     "pytest-xdist>=3.6.1",
     "playwright-dompath>=0.0.1",
     "pytest-dependency>=0.6.0",
-    "lavague>=1.1.19",
-    "lavague-drivers-playwright>=0.2.11",
     "dotenv>=0.9.9",
     "typer>=0.12.0",
     "tqdm>=4.66.0",
+]
+
+[tool.setuptools]
+py-modules = []
+
+[project.optional-dependencies]
+pinata = [
+    "anthropic>=0.45.2",
+    "asyncio>=3.4.3",
+    "google-genai>=1.0.0",
+    "ipykernel>=6.29.5",
+    "mistralai>=1.5.0",
+    "openai>=1.59.8",
+    "pillow>=11.1.0",
+    "playwright>=1.49.1",
+    "playwright-dompath>=0.0.1",
+    "pydantic>=2.10.5",
+    "pytest-playwright>=0.6.2",
+    "python-dotenv>=1.0.1",
+    "requests>=2.32.3",
+]
+
+webtestpilot = [
+    "anthropic>=0.61.0",
+    "baml-py==0.204.0",
+    "google-genai>=1.29.0",
+    "matplotlib>=3.10.3",
+    "numba>=0.61.2",
+    "openai>=1.95.1",
+    "opencv-python>=4.12.0.88",
+    "pillow>=11.3.0",
+    "playwright>=1.53.0",
+    "pydantic>=2.11.7",
+    "python-dotenv>=1.1.1",
+    "python-levenshtein>=0.27.1",
+    "pyyaml>=6.0.2",
+    "scikit-image>=0.25.2",
+    "zss>=1.2.0",
+]
+
+lavague = ["lavague>=1.1.19", "lavague-drivers-playwright>=0.2.11"]
+
+naviqate = [
+    "aiohttp==3.9.5",
+    "aiosignal==1.2.0",
+    "anyio==3.6.1",
+    "appdirs==1.4.4",
+    "argon2-cffi==20.1.0",
+    "asttokens==2.0.5",
+    "async-timeout==4.0.2",
+    "attrs==23.2.0",
+    "beautifulsoup4==4.12.3",
+    "boto3==1.34.44",
+    "botocore==1.34.44",
+    "filelock==3.15.4",
+    "fsspec==2024.3.1",
+    "jupyter_core==5.3.0",
+    "matplotlib==3.7.1",
+    "networkx==3.2.1",
+    "notebook==6.5.4",
+    "numpy==1.25.0",
+    "openai==1.33.0",
+    "pandas==2.1.4",
+    "playwright==1.46.0",
+    "plotly==5.9.0",
+    "prompt-toolkit==3.0.36",
+    "psutil==5.9.1",
+    "pyarrow==11.0.0",
+    "pyee==11.1.0",
+    "pytest==8.2.1",
+    "python-dotenv==1.0.0",
+    "requests==2.31.0",
+    "scikit-learn==1.2.2",
+    "scipy==1.11.3",
+    "selenium==4.23.1",
+    "sentence-transformers==3.0.1",
+    "spacy==3.5.3",
+    "tenacity==8.2.2",
+    "thinc==8.1.10",
+    "tqdm==4.65.0",
+    "transformers==4.36.0",
+    "torch==2.3.1",
+    "torchvision==0.18.1",
+    "trio==0.26.0",
+    "typing-extensions==4.12.2",
+    "tzdata",
+    "wasabi==0.9.1",
+    "websockets==12.0",
+    "xlsxwriter==3.2.0",
+    "webdriver-manager",
+    "undetected-chromedriver",
 ]
