--- a/testcases/pyproject.toml
+++ b/testcases/pyproject.toml
@@ -3,7 +3,7 @@ name = "webtestpilot-dataset"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.12"
 dependencies = [
     "playwright>=1.53.0",
     "pytest>=8.4.1",
@@ -14,6 +14,7 @@ dependencies = [
     "dotenv>=0.9.9",
     "typer>=0.12.0",
     "tqdm>=4.66.0",
+    "nest-asyncio==1.6.0"
 ]
 
 [tool.setuptools]
@@ -93,7 +94,7 @@ naviqate = [
     "spacy==3.5.3",
     "tenacity==8.2.2",
     "thinc==8.1.10",
-    "tqdm==4.65.0",
+    "tqdm==4.66.0",
     "transformers==4.36.0",
     "torch==2.3.1",
     "torchvision==0.18.1",
