refactor: address pinata trace xpath, better calculation and refactor, address run.sh script

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,9 @@ wheels/
 
 # Ruff
 .ruff_cache/
+
+experiments/**/resources/*
+experiments/**/*.network
+experiments/**/*.trace
+experiments/**/*.zip
+experiments/**/*.log
