fix: add platform to bookstack docker compose

--- a/webapps/bookstack/Dockerfile
+++ b/webapps/bookstack/Dockerfile
@@ -1,4 +1,4 @@
-FROM solidnerd/bookstack:25.2.1
+FROM --platform=linux/amd64 solidnerd/bookstack:25.2.1
 
 # Switch to root so we can install things
 USER root
