--- a/baselines/pyproject.toml
+++ b/baselines/pyproject.toml
@@ -58,52 +58,25 @@ webtestpilot = [
 lavague = ["lavague @ https://github.com/ABCbum/LaVague.git"]
 
 naviqate = [
-    "aiohttp==3.9.5",
-    "aiosignal==1.2.0",
-    "anyio==3.6.1",
-    "appdirs==1.4.4",
-    "argon2-cffi==20.1.0",
-    "asttokens==2.0.5",
-    "async-timeout==4.0.2",
-    "attrs==23.2.0",
-    "beautifulsoup4==4.12.3",
-    "boto3==1.34.44",
-    "botocore==1.34.44",
-    "filelock==3.15.4",
-    "fsspec==2024.3.1",
-    "jupyter_core==5.3.0",
-    "matplotlib==3.7.1",
-    "networkx==3.2.1",
-    "notebook==6.5.4",
-    "numpy==1.25.0",
-    "openai==1.33.0",
-    "pandas==2.1.4",
-    "playwright==1.46.0",
-    "plotly==5.9.0",
-    "prompt-toolkit==3.0.36",
-    "psutil==5.9.1",
-    "pyarrow==11.0.0",
-    "pyee==11.1.0",
-    "pytest==8.2.1",
-    "python-dotenv==1.0.0",
-    "requests==2.31.0",
-    "scikit-learn==1.2.2",
-    "scipy==1.11.3",
-    "selenium==4.23.1",
-    "sentence-transformers==3.0.1",
-    "spacy==3.5.3",
-    "tenacity==8.2.2",
-    "thinc==8.1.10",
-    "tqdm==4.66.0",
-    "transformers==4.36.0",
-    "torch==2.3.1",
-    "torchvision==0.18.1",
-    "trio==0.26.0",
-    "typing-extensions==4.12.2",
-    "tzdata",
-    "wasabi==0.9.1",
-    "websockets==12.0",
-    "xlsxwriter==3.2.0",
-    "webdriver-manager",
-    "undetected-chromedriver",
+    "bs4>=0.0.2",
+    "dotenv>=0.9.9",
+    "nest-asyncio>=1.6.0",
+    "openai>=1.99.9",
+    "pillow>=11.3.0",
+    "playwright>=1.54.0",
+    "playwright-dompath>=0.0.1",
+    "pytest>=8.4.1",
+    "pytest-dependency>=0.6.0",
+    "pytest-playwright>=0.7.0",
+    "pytest-xdist>=3.8.0",
+    "requests>=2.32.4",
+    "scipy>=1.16.1",
+    "selenium>=4.35.0",
+    "sentence-transformers>=5.1.0",
+    "torch>=2.8.0",
+    "tqdm>=4.67.1",
+    "transformers>=4.55.2",
+    "typer>=0.16.0",
+    "undetected-chromedriver>=3.5.5",
+    "webdriver-manager>=4.0.2",
 ]
