--- a/experiments/rq3_4/configs/gemma.yaml
+++ b/experiments/rq3_4/configs/gemma.yaml
@@ -48,7 +48,7 @@ logging:
     file:
       class: logging.FileHandler
       formatter: default
-      filename: "webtestpilot-gemma-{}.log".format(__import__("datetime").datetime.now().strftime("%Y-%m-%d_%H-%M-%S"))
+      filename: "webtestpilot-gemma.log"
 
   root:
     level: INFO
