--- a/experiments/rq3_4/configs/glm.yaml
+++ b/experiments/rq3_4/configs/glm.yaml
@@ -48,7 +48,7 @@ logging:
     file:
       class: logging.FileHandler
       formatter: default
-      filename: "webtestpilot-glm-{}.log".format(__import__("datetime").datetime.now().strftime("%Y-%m-%d_%H-%M-%S"))
+      filename: "webtestpilot-glm.log"
 
   root:
     level: INFO
