--- a/experiments/rq3_4/configs/qwen/summarize.yaml
+++ b/experiments/rq3_4/configs/qwen/summarize.yaml
@@ -3,7 +3,7 @@
 
 parser:
   # Semantic parsing of text descriptions into (condition, action, expectation) test steps
-  llm_client: "InternVL"
+  llm_client: "Qwen"
 
   # Automatically infer <unknown> placeholders in parsed test steps
   # If false, throw exception and inform user
@@ -12,19 +12,19 @@ parser:
 executor:
   llm_clients:
     # Generates pre- and post-conditions using the assertion API
-    assertion_generation: "InternVL"
+    assertion_generation: "Qwen"
 
     # Executes assertion API methods (e.g., extract() from state and element)
-    assertion_api: "InternVL"
+    assertion_api: "Qwen"
 
     # Proposes actions given a natural language action description
-    action_proposer: "InternVL"
+    action_proposer: "Qwen"
 
     # Locates UI elements (x, y) from a UI description
     ui_locator: "UGround"
 
     # For tracking same logical pages across states
-    page_reidentification: "InternVL"
+    page_reidentification: "Qwen"
 
   # When a postcondition assertion fails, how many times to retry assertion generation before reporting as a bug
   max_retries: 1
@@ -48,7 +48,7 @@ logging:
     file:
       class: logging.FileHandler
       formatter: default
-      filename: "webtestpilot-internvl.log"
+      filename: "webtestpilot-qwen-summarize.log"
 
   root:
     level: INFO
