--- a/webapps/prestashop/docker-compose.yaml
+++ b/webapps/prestashop/docker-compose.yaml
@@ -22,8 +22,15 @@ services:
   db:
     platform: linux/x86_64
     image: mysql:5.7
+    command: --innodb-purge-threads=1 --innodb-log-file-size=32M --innodb-log-buffer-size=8M --log-error-verbosity=1
     environment:
       MYSQL_DATABASE: prestashop
       MYSQL_USER: admin
       MYSQL_PASSWORD: admin
       MYSQL_ROOT_PASSWORD: root
+    volumes:
+      - db:/var/lib/mysql
+
+volumes:
+  db:
+    driver: local
