--- a/webapps/indico/docker-compose.yaml
+++ b/webapps/indico/docker-compose.yaml
@@ -58,6 +58,8 @@ services:
       - POSTGRES_USER=${PGUSER}
       - POSTGRES_PASSWORD=${PGPASSWORD}
       - POSTGRES_DATABASE=${PGDATABASE}
+    ports:
+      - "5432:5432"
     volumes:
       - "postgres-data:/var/lib/postgresql/data"
   # Nginx proxy
