--- a/webapps/prestashop/docker-compose.yaml
+++ b/webapps/prestashop/docker-compose.yaml
@@ -30,7 +30,8 @@ services:
       MYSQL_ROOT_PASSWORD: root
     volumes:
       - db:/var/lib/mysql
-
+    ports:
+      - "3306:3306"
 volumes:
   db:
     driver: local
