refactor: use the lowercase function name and modify the db port mapping

--- a/webapps/bookstack/docker-compose.yaml
+++ b/webapps/bookstack/docker-compose.yaml
@@ -30,6 +30,8 @@ services:
     volumes:
       - db:/var/lib/mysql
     restart: unless-stopped
+    ports:
+      - "3306:3306"
 
 volumes:
   app_config:
