--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ wheels/
 
 # Environment variables
 .env
-*env*
+*venv*
 
 # Ruff
 .ruff_cache/
@@ -37,3 +37,4 @@ media/
 */*/node_modules/*
 .webtestpilot
 specs/
+mcp
