--- a/extension/webtestpilot/webtestpilot/src/config.yaml
+++ b/extension/webtestpilot/webtestpilot/src/config.yaml
@@ -3,48 +3,47 @@
 
 parser:
   # Semantic parsing of text descriptions into (condition, action, expectation) test steps
-  llm_client: "GPT"
+  llm_client: "Qwen3VL2b"
 
   # Automatically infer <unknown> placeholders in parsed test steps
   # If false, throw exception and inform user
   infer_missing_steps: true
-  
+
 executor:
   llm_clients:
     # Generates pre- and post-conditions using the assertion API
-    assertion_generation: "GPT"
+    assertion_generation: "Qwen3VL2b"
 
     # Executes assertion API methods (e.g., extract() from state and element)
-    assertion_api: "GPT"
+    assertion_api: "Qwen3VL2b"
 
     # Proposes actions given a natural language action description
-    action_proposer: "GPT"
+    action_proposer: "Qwen3VL2b"
 
     # Locates UI elements (x, y) from a UI description
     ui_locator: "UGround"
 
     # For tracking same logical pages across states
-    page_reidentification: "GPT"
+    page_reidentification: "Qwen3VL2b"
 
   # When a postcondition assertion fails, how many times to retry assertion generation before reporting as a bug
   max_retries: 1
-
 
 # Logging dict configs
 logging:
   version: 1
 
   disable_existing_loggers: false
-  
+
   formatters:
     default:
       format: "[%(asctime)s] [%(levelname)s] [%(name)s.%(funcName)s] %(message)s"
-  
+
   handlers:
     console:
       class: logging.StreamHandler
       formatter: default
-  
+
     file:
       class: logging.FileHandler
       formatter: default
