--- a/extension/webtestpilot/webtestpilot/src/config.yaml
+++ b/extension/webtestpilot/webtestpilot/src/config.yaml
@@ -3,7 +3,7 @@
 
 parser:
   # Semantic parsing of text descriptions into (condition, action, expectation) test steps
-  llm_client: "Qwen3VL2b"
+  llm_client: "Qwen3_8b"
 
   # Automatically infer <unknown> placeholders in parsed test steps
   # If false, throw exception and inform user
@@ -12,19 +12,19 @@ parser:
 executor:
   llm_clients:
     # Generates pre- and post-conditions using the assertion API
-    assertion_generation: "Qwen3VL2b"
+    assertion_generation: "Qwen3_8b"
 
     # Executes assertion API methods (e.g., extract() from state and element)
-    assertion_api: "Qwen3VL2b"
+    assertion_api: "Qwen3_8b"
 
     # Proposes actions given a natural language action description
-    action_proposer: "Qwen3VL2b"
+    action_proposer: "Qwen3_8b"
 
     # Locates UI elements (x, y) from a UI description
     ui_locator: "UGround"
 
     # For tracking same logical pages across states
-    page_reidentification: "Qwen3VL2b"
+    page_reidentification: "Qwen3_8b"
 
   # When a postcondition assertion fails, how many times to retry assertion generation before reporting as a bug
   max_retries: 1
