parallel test runner

--- a/webtestpilot/webtestpilot/src/config.yaml
+++ b/webtestpilot/webtestpilot/src/config.yaml
@@ -38,11 +38,22 @@ logging:
   formatters:
     default:
       format: "[%(asctime)s] [%(levelname)s] [%(name)s.%(funcName)s] %(message)s"
+    
+    colored:
+      format: "%(blue)s[%(asctime)s]%(reset)s %(log_color)s[%(levelname)s]%(reset)s %(purple)s[%(name)s.%(funcName)s]%(reset)s %(message)s"
+      style: "%"
+      class: colorlog.ColoredFormatter
+      log_colors:
+        DEBUG: cyan
+        INFO: green
+        WARNING: yellow
+        ERROR: red
+        CRITICAL: red,bg_white
 
   handlers:
     console:
       class: logging.StreamHandler
-      formatter: default
+      formatter: colored
 
     file:
       class: logging.FileHandler
