--- a/webtestpilot/webtestpilot/pyproject.toml
+++ b/webtestpilot/webtestpilot/pyproject.toml
@@ -3,6 +3,7 @@ name = "webtestpilot"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
+license = {text = "MIT"}
 requires-python = ">=3.12"
 dependencies = [
     "anthropic>=0.61.0",
