--- a/webtestpilot/package.json
+++ b/webtestpilot/package.json
@@ -5,13 +5,11 @@
   "version": "0.0.1",
   "license": "MIT",
   "engines": {
-    "vscode": "^1.100.0"
+    "vscode": "^1.100.0",
+    "node": ">=22.12.0"
   },
   "categories": [
     "Other"
-  ],
-  "activationEvents": [
-    "onView:webtestpilot.treeView"
   ],
   "main": "./dist/extension.js",
   "contributes": {
@@ -33,7 +31,7 @@
       },
       {
         "command": "webtestpilot.addFolder",
-        "title": "Add Folder", 
+        "title": "Add Folder",
         "icon": "$(new-folder)"
       },
       {
@@ -75,13 +73,18 @@
       {
         "command": "webtestpilot.showWorkspaceRoot",
         "title": "WebTestPilot: Show Workspace Root"
+      },
+      {
+        "command": "webtestpilot.openFixtureEditor",
+        "title": "Open Fixture Editor"
       }
     ],
     "views": {
       "webtestpilot": [
         {
           "id": "webtestpilot.treeView",
-          "name": "WebTestPilot"
+          "name": "WebTestPilot",
+          "icon": "resources/view-icon.svg"
         }
       ]
     },
