--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -2,22 +2,25 @@
   "name": "hello-world",
   "version": "0.0.1",
   "private": true,
+  "engines": {
+    "node": ">=22.12.0"
+  },
   "scripts": {
-    "start": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "start": "rsbuild",
+    "build": "tsc && rsbuild build",
+    "preview": "rsbuild preview"
   },
   "dependencies": {
     "@vscode/webview-ui-toolkit": "^1.2.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
+    "@rsbuild/core": "^1.6.0",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "@types/vscode-webview": "^1.57.0",
     "@vitejs/plugin-react": "^1.0.7",
-    "typescript": "^4.4.4",
-    "vite": "^2.9.13"
+    "typescript": "^4.4.4"
   }
 }
