checkpoint conversion, first page test editor

--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "install:all": "yarn && cd webview-ui && yarn",
     "start:webview": "cd webview-ui && yarn start",
     "build:webview": "cd webview-ui && yarn build",
-    "vscode:prepublish": "yarn run package",
+    "vscode:prepublish": "yarn run build:webview && yarn run package",
     "compile": "yarn run check-types && yarn run lint && node esbuild.js",
     "watch": "npm-run-all -p watch:*",
     "watch:esbuild": "node esbuild.js --watch",
     "watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
-    "package": "yarn run check-types && yarn run lint && node esbuild.js --production",
+    "package": "yarn run build:webview && yarn run check-types && yarn run lint && node esbuild.js --production",
     "compile-tests": "tsc -p . --outDir out",
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "yarn run compile-tests && yarn run compile && yarn run lint",
