--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@rsbuild/core": "^1.6.0",
+    "@rsbuild/plugin-react": "^1.4.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@types/vscode-webview": "^1.57.0",
