--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -18,10 +18,12 @@
   "devDependencies": {
     "@rsbuild/core": "^1.6.0",
     "@rsbuild/plugin-react": "^1.4.1",
+    "@tailwindcss/postcss": "^4.1.16",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@types/vscode-webview": "^1.57.0",
     "@vitejs/plugin-react": "^1.0.7",
+    "tailwindcss": "^4.1.16",
     "typescript": "^4.4.4"
   }
 }
