refactor, add translations, clean up packages, fix build configs, csp, ... better messages

--- a/package.json
+++ b/package.json
@@ -18,15 +18,14 @@
     "install:all": "yarn && cd webview-ui && yarn",
     "start:webview": "cd webview-ui && yarn start",
     "build:webview": "cd webview-ui && yarn build",
-    "vscode:prepublish": "yarn run build:webview && yarn run package",
-    "compile": "yarn run check-types && yarn run lint && node esbuild.js",
-    "watch": "npm-run-all -p watch:*",
+    "vscode:prepublish": "yarn build:webview && yarn package",
+    "compile": "yarn check-types && yarn lint && node esbuild.js",
     "watch:esbuild": "node esbuild.js --watch",
     "watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
-    "package": "yarn run build:webview && yarn run check-types && yarn run lint && node esbuild.js --production",
+    "package": "yarn build:webview && yarn  check-types && yarn lint && node esbuild.js --production",
     "compile-tests": "tsc -p . --outDir out",
     "watch-tests": "tsc -p . -w --outDir out",
-    "pretest": "yarn run compile-tests && yarn run compile && yarn run lint",
+    "pretest": "yarn compile-tests && yarn compile && yarn lint",
     "check-types": "tsc --noEmit",
     "lint": "eslint src",
     "test": "vscode-test"
