--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -8,22 +8,26 @@
   "scripts": {
     "start": "rsbuild",
     "build": "tsc && rsbuild build",
-    "preview": "rsbuild preview"
+    "preview": "rsbuild preview",
+    "i18n:extract": "lingui extract",
+    "i18n:compile": "lingui compile --typescript"
   },
   "dependencies": {
+    "@lingui/react": "^5.5.2",
     "@vscode/webview-ui-toolkit": "^1.2.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
-    "@rsbuild/core": "^1.6.0",
+    "@lingui/cli": "^5.5.2",
+    "@lingui/macro": "^5.5.2",
+    "@lingui/swc-plugin": "^5.6.1",
+    "@rsbuild/core": "1.4.8",
     "@rsbuild/plugin-react": "^1.4.1",
-    "@tailwindcss/postcss": "^4.1.16",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@types/vscode-webview": "^1.57.0",
     "@vitejs/plugin-react": "^1.0.7",
-    "tailwindcss": "^4.1.16",
     "typescript": "^4.4.4"
   }
 }
