--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,9 @@
     "sourceMap": true,
     "rootDir": "src",
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "jsx": "react-jsx",
+		"jsxImportSource": "preact"
   },
   "include": [
     "src",
