--- a/webtestpilot/src/config.yaml
+++ b/webtestpilot/src/config.yaml
@@ -3,7 +3,7 @@
 
 parser:
   # Semantic parsing of text descriptions into (condition, action, expectation) test steps
-  llm_client: "LocalModel"
+  llm_client: "FallbackLocalModel"
 
   # Automatically infer <unknown> placeholders in parsed test steps
   # If false, throw exception and inform user
@@ -12,19 +12,19 @@ parser:
 executor:
   llm_clients:
     # Generates pre- and post-conditions using the assertion API
-    assertion_generation: "LocalModel"
+    assertion_generation: "FallbackLocalModel"
 
     # Executes assertion API methods (e.g., extract() from state and element)
-    assertion_api: "LocalModel"
+    assertion_api: "FallbackLocalModel"
 
     # Proposes actions given a natural language action description
-    action_proposer: "LocalModel"
+    action_proposer: "FallbackLocalModel"
 
     # Locates UI elements (x, y) from a UI description
-    ui_locator: "UIVenus"
+    ui_locator: "FallbackUIVenus"
 
     # For tracking same logical pages across states
-    page_reidentification: "LocalModel"
+    page_reidentification: "FallbackLocalModel"
 
   # How many times in total to try post-condition generation.
   max_tries: 1
