--- a/webtestpilot/src/config.yaml
+++ b/webtestpilot/src/config.yaml
@@ -3,32 +3,31 @@
 
 parser:
   # Semantic parsing of text descriptions into (condition, action, expectation) test steps
-  llm_client: "GPT"
+  llm_client: "FallbackLocalModel"
 
   # Automatically infer <unknown> placeholders in parsed test steps
   # If false, throw exception and inform user
   infer_missing_steps: true
-  
+
 executor:
   llm_clients:
     # Generates pre- and post-conditions using the assertion API
-    assertion_generation: "GPT"
+    assertion_generation: "FallbackLocalModel"
 
     # Executes assertion API methods (e.g., extract() from state and element)
-    assertion_api: "GPT"
+    assertion_api: "FallbackLocalModel"
 
     # Proposes actions given a natural language action description
-    action_proposer: "GPT"
+    action_proposer: "FallbackLocalModel"
 
     # Locates UI elements (x, y) from a UI description
-    ui_locator: "UGround"
+    ui_locator: "FallbackUIVenus"
 
     # For tracking same logical pages across states
-    page_reidentification: "GPT"
+    page_reidentification: "FallbackLocalModel"
 
-  # When a postcondition assertion fails, how many times to retry assertion generation before reporting as a bug
-  max_retries: 1
-
+  # How many times in total to try post-condition generation.
+  max_tries: 1
 
 # Logging dict configs
 logging:
@@ -39,12 +38,13 @@ logging:
   formatters:
     default:
       format: "[%(asctime)s] [%(levelname)s] [%(name)s.%(funcName)s] %(message)s"
-  
+      datefmt: "%H:%M:%S"
+
   handlers:
     console:
       class: logging.StreamHandler
       formatter: default
-  
+      stream: ext://sys.stdout
     file:
       class: logging.FileHandler
       formatter: default
